--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-  <a href="/"><h1>Castanho Correia</h1></a>
+  <a href="/"><h1>J. Castanho Correia</h1></a>
   <nav id="nav">
     {% for item in site.data.map %}
       <button class="{% if item.url == page.url %}active{% endif %}">
@@ -7,4 +7,4 @@
       </button>
     {% endfor %}
   </nav>
-</header> 
+</header>
