--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -1,21 +1,24 @@
-$blue: #000028
+$blue: #000018
 $green: #00ff77
 
 *, *:before, *:after
     box-sizing: border-box
     box-shadow: none
-    color: white
+    color: gainsboro
 
 a
     color: inherit
     text-decoration: none
 
-body 
+body
     background-color: $blue
     font-family: 'Space Mono', monospace
-    line-height: 1.6em
+    font-size: 1rem
+    line-height: 1.6
     margin: 0px auto
     max-width: 62rem
+    overflow-y: scroll
+    scrollbar-color: red yellow
     #main
         margin: 0 1rem
 
@@ -25,7 +28,7 @@ fieldset
         margin-block-end: 0
 
 footer
-    margin-top: 6rem
+    margin-top: 4rem
     div
         align-items: center
         display: flex
@@ -56,35 +59,37 @@ footer
             left: 50%
             position: absolute
     small
-        opacity: 50% 
+        opacity: 50%
 
 h2
-  font-size: 1.6rem
-  font-weight: 700
-  letter-spacing: 6px
-  line-height: 1.6
-  text-transform: uppercase
+    font-size: 1.6rem
+    font-weight: 700
+    letter-spacing: 6px
+    line-height: 1.6
+    text-transform: uppercase
 
-header 
+h3
+    margin-bottom: 0.2rem
+
+header
     align-items: center
     display: flex
     justify-content: space-between
-    line-height: 4rem
-    margin-bottom: 56px
+    margin-bottom: 4rem
 
 label
     font-size: 1.2rem
     font-weight: bold
     margin: 12px
 
-nav 
+nav
     align-items: center
     display: flex
     flex-direction: row
     margin-top: 0px
-    button 
+    button
         background-color: transparent
-        border: 1px solid white
+        border: 1px solid gainsboro
         cursor: pointer
         font-family: 'Space Mono', monospace
         font-size: 1.2rem
@@ -94,27 +99,26 @@ nav
         &:not(:first-child)
             margin-left: 1.2rem
         a
-            border: 0.6rem solid transparent
+            border: 0.4rem solid transparent
             display: inline-block
             height: 100%
             width: 100%
-        &:hover 
-            background-color: white
+        &:hover
+            background-color: gainsboro
             color: $blue
             font-weight: bold
-        &.active    
+        &.active
             background-color: $green
             color: $blue
             font-weight: bold
             pointer-events: none
 
 p
-    font-size: 1.2em
     font-style: normal
     font-weight: 400
     hyphens: auto
     line-height: 1.6
-    padding-bottom: 1rem
+    margin-block-end: 2rem
     a
         border-bottom: 1px dashed hsla(0,0%, 62.7%, 0.50)
         &:hover
@@ -129,8 +133,8 @@ section
             border-bottom: unset
             color: $green
     div
-        margin-top: 6rem
-        text-align: left       
+        margin-top: 2rem
+        text-align: left
     #techs
         display: grid
         gap: 4rem
@@ -146,10 +150,16 @@ section
                     filter: invert(84%) sepia(28%) saturate(4385%) hue-rotate(88deg) brightness(95%) contrast(113%)
         img
             filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(255deg) brightness(104%) contrast(101%)
-                
+
 span
     display: block
-    margin-block-end: 0.8rem
+    font-size: 0.8rem
+
+ul
+    padding-left: 1rem
+    li
+        font-size: 0.8rem
+        line-height: 1.4rem
 
 @media screen and (max-width: 600px)
     header
@@ -159,4 +169,3 @@ span
             gap: 1.6rem
             grid-template-columns: repeat(4, 1fr)
             padding: 0
-
