--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -16,7 +16,7 @@ body
     font-size: 1rem
     line-height: 1.6
     margin: 0px auto
-    max-width: 62rem
+    max-width: 80rem
     overflow-y: scroll
     #main
         margin: 0 1rem
@@ -137,6 +137,7 @@ section
     #techs
         display: flex
         gap: 0.6rem
+        flex-wrap: wrap
         justify-items: center
         list-style: none
         margin-top: 0.6rem
@@ -167,8 +168,3 @@ ul
 @media screen and (max-width: 600px)
     header
         flex-direction: column
-    section
-        #techs
-            gap: 1.6rem
-            grid-template-columns: repeat(4, 1fr)
-            padding: 0
