--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -60,14 +60,18 @@ footer
     small
         opacity: 50%
 
-h2
+h1
     font-size: 1.6rem
+    letter-spacing: 0.2rem
+
+h2
+    font-size: 1.4rem
     font-weight: 700
-    letter-spacing: 6px
-    line-height: 1.6
+    letter-spacing: 0.2rem
     text-transform: uppercase
 
 h3
+    font-size: 1.2rem
     margin-bottom: 0.2rem
 
 header
@@ -132,7 +136,7 @@ section
             border-bottom: unset
             color: $green
     div
-        margin-top: 2rem
+        margin-top: 2.6rem
         text-align: left
     #techs
         display: flex
@@ -140,7 +144,6 @@ section
         flex-wrap: wrap
         justify-items: center
         list-style: none
-        margin-top: 0.6rem
         padding: 0
         vertical-align: center
         a
@@ -160,7 +163,7 @@ span
     font-size: 0.8rem
 
 ul
-    padding-left: 1rem
+    padding-left: 1.2rem
     li
         font-size: 0.8rem
         line-height: 1.4rem
